# ninePJT

./: .gitignore  Dockerfile  README.md  concept.txt  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/: .python-version  Dockerfile  manage.py  pyproject.toml
backend/apps/accounts/: admin.py  models.py  query.py  service.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_usertype_user_phone_alter_user_created_at_and_more.py
backend/apps/albums/migrations/: 0004_event_person_imageperson_imageevent_image_events_and_more.py
backend/apps/albums/tests/: tests.py
backend/apps/blogs/: forms.py  models.py  urls.py
backend/apps/blogs/migrations/: 0001_initial.py
backend/apps/diaries/: apps.py  urls.py  views.py
backend/apps/front/: apps.py  views.py
backend/apps/lotteries/: apps.py
backend/apps/maps/: apps.py  urls.py
backend/apps/poker_face/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/poker_face/migrations/: 0001_initial.py  0002_alter_vote_unique_together_user_real_name_and_more.py  0002_auto_20250311_0032.py  0004_vote_is_active.py  (+1 more)
backend/config/: settings.py  urls.py
backend/core/abstracts/: models.py
backend/templates/: base.html  messages.html
backend/templates/albums/: upload-modal.html  upload.html
backend/templates/blogs/: main.html
backend/templates/diaries/: diaries-main components tested.html
backend/templates/lotteries/: draw_new_numbers.html
backend/templates/root/: index.html
backend/utilities/: middleware.py  storages.py
(+197 files in other folders)
